Update scripts and notebooks, add functionality for training on QCDGE

--- a/notebooks/analyze_preds.ipynb
+++ b/notebooks/analyze_preds.ipynb
@@ -119,16 +119,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/gap0M128502532\"\n",
-    "ckpt_name = \"model_55_epochs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo0M128502532\"\n",
+    "ckpt_name = \"model_45_epochs\"\n",
     "model = load_model(logs_path, ckpt_name)\n",
     "\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/gap5M128502532_transfer_converged\"\n",
-    "ckpt_name = \"model_35_epochs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo5M128502532_transfer_converged/visnet_logs\"\n",
+    "ckpt_name = \"model_30_epochs\"\n",
     "pretrained_model = load_model(logs_path, ckpt_name)\n",
     "\n",
-    "all_mae = test_model(model, test_set=\"PC9\", folder=\"E_qp\", target=\"gap\", limit_mol_size=False)\n",
-    "all_mae_pretrained = test_model(pretrained_model, test_set=\"PC9\", folder=\"E_qp\", target=\"gap\", limit_mol_size=False)"
+    "all_mae = test_model(model, test_set=\"PC9\", folder=\"E_qp\", target=\"homo\", limit_mol_size=False)\n",
+    "all_mae_pretrained = test_model(pretrained_model, test_set=\"PC9\", folder=\"E_qp\", target=\"homo\", limit_mol_size=False)"
    ]
   },
   {
@@ -137,16 +137,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/gap0M128502532\"\n",
-    "ckpt_name = \"model_55_epochs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo0M128502532\"\n",
+    "ckpt_name = \"model_45_epochs\"\n",
     "model = load_model(logs_path, ckpt_name)\n",
     "\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/gap5M128502532_transfer_converged\"\n",
-    "ckpt_name = \"model_35_epochs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo5M128502532_transfer_converged/visnet_logs\"\n",
+    "ckpt_name = \"model_30_epochs\"\n",
     "pretrained_model = load_model(logs_path, ckpt_name)\n",
     "\n",
-    "all_mae = test_model_gwset(model, target=\"GAP\")\n",
-    "all_mae_pretrained = test_model_gwset(pretrained_model, target=\"GAP\")"
+    "all_mae = test_model_gwset(model, target=\"HOMO\")\n",
+    "all_mae_pretrained = test_model_gwset(pretrained_model, target=\"HOMO\")"
    ]
   },
   {
@@ -177,13 +177,14 @@
     "ax.set_xticklabels(xticks, fontname=\"Helvetica\", fontsize=14)\n",
     "\n",
     "ax.set_ylabel(\"MAE [eV]\", **font)\n",
-    "ax.set_ylim([0, 2.4])\n",
-    "yticks = np.arange(stop=2.6, step=0.2)\n",
+    "ax.set_ylim([0, 1.6])\n",
+    "yticks = np.arange(stop=1.8, step=0.2)\n",
     "ax.tick_params(axis='y', labelsize=14)\n",
     "ax.set_yticks(yticks)\n",
     "\n",
     "ax.legend(prop={\"family\": font[\"fontname\"], \"size\": 14})\n",
     "\n",
+    "plt.grid(True, axis=\"y\", linestyle=\"--\", linewidth=0.5, alpha=0.7)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -244,6 +245,15 @@
     "    }\n",
     "}\n",
     "\n",
+    "errors_homo_small = {\n",
+    "    \"Test\": {\n",
+    "        \"Reference\": [0.0595],\n",
+    "        \"None\": [0.1587, 0.1534, 0.1458],\n",
+    "        \"Full\": [0.0488, 0.0455, 0.0458],\n",
+    "        \"Transfer\": [0.007, 0.005, 0.006],\n",
+    "    }\n",
+    "}\n",
+    "\n",
     "data_homo_large = {\n",
     "    \"Test\": {\n",
     "        \"Reference\": [0.0378],\n",
@@ -272,7 +282,7 @@
     "}\n",
     "\n",
     "data = data_homo_small\n",
-    "data_set = \"OE62H\"\n",
+    "data_set = \"PC9\"\n",
     "data = data[data_set]\n",
     "\n",
     "# Gradient colors\n",
@@ -309,18 +319,23 @@
     "    data[\"Reference\"][0],\n",
     "    width=bar_width,\n",
     "    label=f\"{N_pre_values[0]}\",\n",
-    "    color=colors[0]\n",
+    "    color=colors[0],\n",
+    "    yerr=errors_homo_small[\"Reference\"][0],\n",
+    "    capsize=5\n",
     ")\n",
     "\n",
     "# --- Plot other categories (3 bars each), centered on their ticks with intra-group spacing ---\n",
     "for i, (N, color) in enumerate(zip(N_pre_values[1:], colors[1:])):  # i = 0..2\n",
     "    vals = [data[cat][i] for cat in categories[1:]]  # None, Full, Transfer\n",
+    "    errs = [errors_homo_small[cat][i] for cat in categories[1:]]\n",
     "    ax.bar(\n",
     "        x_groups + offsets[i],\n",
     "        vals,\n",
     "        width=bar_width,\n",
     "        label=f\"{N}\",\n",
-    "        color=color\n",
+    "        color=color,\n",
+    "        yerr=errs,\n",
+    "        capsize=5\n",
     "    )\n",
     "\n",
     "# Axes, ticks, legend\n",
@@ -482,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bar plots for talk before and after bitter lesson"
+    "# Bar plots for talk before and after bitter lesson"
    ]
   },
   {
@@ -511,7 +526,7 @@
     "    \"lumo small transfer 5M\": [0.0321, 0.0530, 0.1172]\n",
     "}\n",
     "\n",
-    "all_mae = data[\"gap reference 2\"]\n",
+    "all_mae = data[\"homo reference 2\"]\n",
     "\n",
     "# Gradient colors\n",
     "cmap = plt.cm.Blues\n",
@@ -531,12 +546,12 @@
     "    )\n",
     "\n",
     "# Axes, ticks, legend\n",
-    "ax.set_title(\"Gap Prediction\", fontname=\"Helvetica\", fontsize=25)\n",
+    "ax.set_title(\"Homo Prediction\", fontname=\"Helvetica\", fontsize=25)\n",
     "ax.set_xlabel(\"Dataset\", **font)\n",
     "ax.set_ylabel(\"MAE [eV]\", **font)\n",
     "ax.set_xticks([0, 1, 2])\n",
     "ax.set_xticklabels(data_sets, fontname=\"Helvetica\", fontsize=14)\n",
-    "yticks = np.arange(stop=0.59, step=0.05)  # adjust depending on dataset\n",
+    "yticks = np.arange(stop=0.45, step=0.05)  # adjust depending on dataset\n",
     "ax.set_yticks(yticks)\n",
     "ax.tick_params(axis='y', labelsize=14)\n",
     "ax.set_ylim(0, yticks[-1])\n",
@@ -939,7 +954,7 @@
     "    \"OE62H\": [0.5187, 0.4097, 0.4287, 0.2559]\n",
     "}\n",
     "\n",
-    "target = \"lumo\"\n",
+    "target = \"homo\"\n",
     "\n",
     "if target == \"homo\":\n",
     "    data = data_homo\n",
@@ -1011,7 +1026,165 @@
     "ax.tick_params(axis='y', labelsize=14)\n",
     "ax.set_ylim(0, yticks[-1])\n",
     "\n",
-    "legend = ax.legend(title=\"Pretraining Targets\", prop={\"family\": font[\"fontname\"], \"size\": 14})\n",
+    "legend = ax.legend(title=\"Pretraining Targets\", prop={\"family\": font[\"fontname\"], \"size\": 14}, loc=\"upper left\")\n",
+    "legend.get_title().set_fontsize(14)\n",
+    "\n",
+    "plt.grid(True, axis=\"y\", linestyle=\"--\", linewidth=0.5, alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduced for Talk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_homo = [0.2074, 0.0632, 0.2215, 0.0910]\n",
+    "data_lumo = [0.1258, 0.1331, 0.0530, 0.0755]\n",
+    "data_gap = [0.2696, 0.1505, 0.2374, 0.0951]\n",
+    "\n",
+    "data = data_gap\n",
+    "\n",
+    "font = {\"fontname\": \"Helvetica\", \"fontsize\": 20}\n",
+    "\n",
+    "cmap = plt.cm.Blues\n",
+    "colors = [cmap(i) for i in np.linspace(0.35, 1.05, len(data))]\n",
+    "\n",
+    "targets = [\"None\", \"Homo\", \"Lumo\", \"Gap\"]\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "for i, (target, val) in enumerate(zip(targets, data)):\n",
+    "    ax.bar(\n",
+    "        i+1,\n",
+    "        val,\n",
+    "        #width=bar_width,\n",
+    "        label=target,\n",
+    "        color=colors[i]\n",
+    "    )\n",
+    "\n",
+    "ax.set_title(\"Gap, Small Model\", fontname=\"Helvetica\", fontsize=25)\n",
+    "ax.set_xlabel(\"Pretraining Target\", **font)\n",
+    "ax.set_ylabel(\"MAE [eV]\", **font)\n",
+    "ax.set_xticks([i+1 for i in range(4)])\n",
+    "ax.set_xticklabels(targets, fontname=\"Helvetica\", fontsize=16)\n",
+    "yticks = np.arange(stop=0.35, step=0.05)\n",
+    "ax.set_yticks(yticks)\n",
+    "ax.tick_params(axis='y', labelsize=14)\n",
+    "ax.set_ylim(0, yticks[-1])\n",
+    "\n",
+    "#legend = ax.legend(title=\"Pretraining Targets\", prop={\"family\": font[\"fontname\"], \"size\": 14}, loc=\"upper right\")\n",
+    "#legend.get_title().set_fontsize(14)\n",
+    "\n",
+    "plt.grid(True, axis=\"y\", linestyle=\"--\", linewidth=0.5, alpha=0.7)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "font = {\"fontname\": \"Helvetica\", \"fontsize\": 20}      \n",
+    "\n",
+    "data_homo = {\n",
+    "    \"PC9\": [0.2074, 0.0632, 0.2215, 0.0910],\n",
+    "    \"OE62L\": [0.3751, 0.0866, 0.3004, 0.1179],\n",
+    "}\n",
+    "\n",
+    "data_lumo = {\n",
+    "    \"PC9\": [0.1258, 0.1331, 0.0530, 0.0755],\n",
+    "    \"OE62L\": [0.3075, 0.4415, 0.1172, 0.2490],\n",
+    "}\n",
+    "\n",
+    "data_gap = {\n",
+    "    \"PC9\": [0.2696, 0.1505, 0.2374, 0.0951],\n",
+    "    \"OE62L\": [0.5245, 0.3452, 0.3177, 0.2322],\n",
+    "}\n",
+    "\n",
+    "target = \"lumo\"\n",
+    "\n",
+    "if target == \"homo\":\n",
+    "    data = data_homo\n",
+    "elif target == \"lumo\":\n",
+    "    data = data_lumo\n",
+    "elif target == \"gap\":\n",
+    "    data = data_gap\n",
+    "\n",
+    "bar_categories = [\"None\", \"Homo\", \"Lumo\", \"Gap\"]\n",
+    "categories = [\"PC9\", \"OE62L\"]\n",
+    "\n",
+    "# Gradient colors\n",
+    "cmap = plt.cm.Blues\n",
+    "colors = [cmap(i) for i in np.linspace(0.35, 1.05, len(bar_categories))]\n",
+    "\n",
+    "bar_width = 0.35\n",
+    "\n",
+    "# Group widths\n",
+    "W_group = 4*bar_width   # width of groups with 2 bars\n",
+    "W_ref   = bar_width                 # single bar for Reference\n",
+    "S_groups = 1.0\n",
+    "\n",
+    "# X positions\n",
+    "x_groups = np.array([1, 3], dtype=float)\n",
+    "x_ref = x_groups[0] - (S_groups - (W_group - W_ref)/2.0)\n",
+    "\n",
+    "# Offsets for 2 bars inside a group\n",
+    "offsets = np.array([\n",
+    "    #-W_group/2 + bar_width/2,\n",
+    "    -W_group/2 + bar_width/2 + bar_width,\n",
+    "     W_group/2 - bar_width/2 - bar_width,\n",
+    "    # W_group/2 - bar_width/2\n",
+    "])\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "# --- Plot Reference (single bar) ---\n",
+    "'''\n",
+    "ax.bar(\n",
+    "    x_ref,\n",
+    "    data[\"Reference\"][0],\n",
+    "    width=bar_width,\n",
+    "    label=f\"{N_pre_values[0]}\",\n",
+    "    color=colors[0]\n",
+    ")\n",
+    "'''\n",
+    "\n",
+    "# --- Plot other categories (2 bars each) ---\n",
+    "for i, (b_cat, color) in enumerate(zip(bar_categories, colors)):  # i = 0..1\n",
+    "    vals = [data[cat][i] for cat in categories]\n",
+    "    ax.bar(\n",
+    "        x_groups + offsets[i],\n",
+    "        vals,\n",
+    "        width=bar_width,\n",
+    "        label=f\"{b_cat}\",\n",
+    "        color=color\n",
+    "    )\n",
+    "\n",
+    "# Axes, ticks, legend\n",
+    "ax.set_title(target.title(), fontname=\"Helvetica\", fontsize=25)\n",
+    "ax.set_xlabel(\"Dataset\", **font)\n",
+    "ax.set_ylabel(\"MAE [eV]\", **font)\n",
+    "#xticks = np.concatenate(([x_ref], x_groups))\n",
+    "xticks = x_groups\n",
+    "ax.set_xticks(xticks)\n",
+    "ax.set_xticklabels(categories, fontname=\"Helvetica\", fontsize=14)\n",
+    "yticks = np.arange(stop=0.65, step=0.1)  # adjust depending on dataset\n",
+    "ax.set_yticks(yticks)\n",
+    "ax.tick_params(axis='y', labelsize=14)\n",
+    "ax.set_ylim(0, yticks[-1])\n",
+    "\n",
+    "legend = ax.legend(title=\"Pretraining Targets\", prop={\"family\": font[\"fontname\"], \"size\": 14}, loc=\"upper left\")\n",
     "legend.get_title().set_fontsize(14)\n",
     "\n",
     "plt.grid(True, axis=\"y\", linestyle=\"--\", linewidth=0.5, alpha=0.7)\n",
@@ -1032,33 +1205,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set = \"PC9\"\n",
+    "test_set = \"OE62L\"\n",
     "target = \"homo\"\n",
+    "\n",
+    "logs_path = f\"/Volumes/LaCie/trained_models/ViSNet/pre{target}5M128502532\"\n",
+    "ckpt_name = \"model_25_epochs\"\n",
+    "only_pretrained_model = load_model(logs_path, ckpt_name)\n",
     "\n",
     "logs_path = f\"/Volumes/LaCie/trained_models/ViSNet/{target}0M128502532\"\n",
     "ckpt_name = \"model_45_epochs\"\n",
-    "model = load_model(logs_path, ckpt_name)\n",
+    "only_finetuned_model = load_model(logs_path, ckpt_name)\n",
     "\n",
     "logs_path = f\"/Volumes/LaCie/trained_models/ViSNet/{target}5M128502532_transfer_converged/visnet_logs\"\n",
     "ckpt_name = \"model_30_epochs\"\n",
-    "pretrained_model = load_model(logs_path, ckpt_name)\n",
+    "pretrained_finetuned_model = load_model(logs_path, ckpt_name)\n",
     "\n",
     "xyz_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"mols\")\n",
     "gw_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"E_qp\")\n",
     "omol25_path = os.path.join(\"/Volumes/LaCie/test_sets\", test_set, \"E_omol25\")\n",
     "\n",
     "xyz_files = os.listdir(xyz_path)\n",
-    "all_mae_gw = []\n",
-    "all_mae_omol25 = []\n",
-    "all_mae_gw_pretrain = []\n",
-    "all_mae_omol25_pretrain = []\n",
+    "all_mae_gw_both = []\n",
+    "all_mae_omol25_both = []\n",
+    "all_mae_gw_only_pretraining = []\n",
+    "all_mae_omol25_only_pretraining = []\n",
+    "all_mae_gw_only_finetuning = []\n",
+    "all_mae_omol25_only_finetuning = []\n",
+    "\n",
     "with torch.no_grad():\n",
+    "\n",
     "    for xyz_file in tqdm(xyz_files, leave=False):\n",
+    "\n",
     "        mol = xyz_file[:-4]\n",
     "        atoms = read(f\"{xyz_path}/{xyz_file}\", format=\"xyz\")\n",
     "        homo_idx = int(np.sum(atoms.get_atomic_numbers()) // 2 - 1)\n",
     "        e_gw = np.loadtxt(f\"{gw_path}/{mol}.dat\")\n",
     "        e_omol25 = np.loadtxt(f\"{omol25_path}/{mol}.dat\")\n",
+    "\n",
     "        if target == \"homo\":\n",
     "            y_gw = float(e_gw[homo_idx])\n",
     "            y_omol25 = float(e_omol25[0])\n",
@@ -1068,18 +1251,32 @@
     "        elif target == \"gap\":\n",
     "            y_gw = float(e_gw[homo_idx + 1]) - float(e_gw[homo_idx])\n",
     "            y_omol25 = float(e_omol25[1]) - float(e_omol25[0])\n",
+    "\n",
     "        Z = torch.from_numpy(atoms.get_atomic_numbers())\n",
     "        R = torch.from_numpy(atoms.get_positions()).to(dtype=torch.float32)\n",
     "        B = torch.zeros((len(atoms),)).to(dtype=torch.int64)\n",
     "        data = {\"z\": Z, \"pos\": R, \"batch\": B}\n",
-    "        y_pred, _ = model(data)\n",
-    "        y_pred = y_pred.item()\n",
-    "        y_pred_pretrain, _ = pretrained_model(data)\n",
-    "        y_pred_pretrain = y_pred_pretrain.item()\n",
-    "        all_mae_gw.append(abs(y_pred - y_gw))\n",
-    "        all_mae_omol25.append(abs(y_pred - y_omol25))\n",
-    "        all_mae_gw_pretrain.append(abs(y_pred_pretrain - y_gw))\n",
-    "        all_mae_omol25_pretrain.append(abs(y_pred_pretrain - y_omol25))"
+    "\n",
+    "        y_pred_both, _ = pretrained_finetuned_model(data)\n",
+    "        y_pred_both = y_pred_both.item()\n",
+    "\n",
+    "        y_pred_only_pretraining, _ = only_pretrained_model(data)\n",
+    "        y_pred_only_pretraining = y_pred_only_pretraining.item()\n",
+    "\n",
+    "        y_pred_only_finetuning, _ = only_finetuned_model(data)\n",
+    "        y_pred_only_finetuning = y_pred_only_finetuning.item()\n",
+    "\n",
+    "        #if not y_gw < y_pred_only_finetuning < y_omol25 and not y_omol25 < y_pred_only_finetuning < y_gw:\n",
+    "        #    continue\n",
+    "\n",
+    "        all_mae_gw_both.append(abs(y_pred_both - y_gw))\n",
+    "        all_mae_omol25_both.append(abs(y_pred_both - y_omol25))\n",
+    "\n",
+    "        all_mae_gw_only_pretraining.append(abs(y_pred_only_pretraining - y_gw))\n",
+    "        all_mae_omol25_only_pretraining.append(abs(y_pred_only_pretraining - y_omol25))\n",
+    "\n",
+    "        all_mae_gw_only_finetuning.append(abs(y_pred_only_finetuning - y_gw))\n",
+    "        all_mae_omol25_only_finetuning.append(abs(y_pred_only_finetuning - y_omol25))"
    ]
   },
   {
@@ -1096,24 +1293,32 @@
     "cmap = plt.cm.Blues\n",
     "\n",
     "# Scatter plots\n",
-    "ax.scatter(all_mae_gw, all_mae_omol25, label=\"Without Pretraining\", s=30, color=cmap(0.5))\n",
-    "ax.scatter(all_mae_gw_pretrain, all_mae_omol25_pretrain, label=\"With Pretraining\", s=30, color=cmap(0.9))\n",
+    "#ax.scatter(all_mae_gw_only_finetuning, all_mae_omol25_only_finetuning, label=\"Only Finetuning\", s=30, color=cmap(0.4))\n",
+    "#ax.scatter(all_mae_gw_only_pretraining, all_mae_omol25_only_pretraining, label=\"Only Pretraining\", s=30, color=cmap(0.7))\n",
+    "#ax.scatter(all_mae_gw_both, all_mae_omol25_both, label=\"Finetuning and Pretraining\", s=30, color=cmap(1.0))\n",
+    "\n",
+    "#ax.scatter(all_mae_gw_only_finetuning, all_mae_omol25_only_finetuning, label=\"Only Finetuning\", s=30)#, color=cmap(0.5))\n",
+    "ax.scatter(all_mae_gw_only_pretraining, all_mae_omol25_only_pretraining, label=\"Only Pretraining\", s=30)#, color=cmap(0.5))\n",
+    "ax.scatter(all_mae_gw_both, all_mae_omol25_both, label=\"Finetuning and Pretraining\", s=30)#, color=cmap(0.9))\n",
     "\n",
     "# Title\n",
-    "ax.set_title(\"PC9\", fontname=\"Helvetica\", fontsize=25)\n",
+    "ax.set_title(test_set, fontname=\"Helvetica\", fontsize=25)\n",
+    "\n",
+    "lim = 1.6\n",
+    "step = 0.2\n",
     "\n",
     "# X-axis\n",
     "ax.set_xlabel(\"MAE QM9GW [eV]\", **font)\n",
-    "ax.set_xlim([0, 2])\n",
-    "xticks = np.arange(0, 2.2, 0.2)\n",
+    "ax.set_xlim([0, lim])\n",
+    "xticks = np.arange(0, lim+step, step)\n",
     "xticks = [float(f\"{x:.1f}\") for x in xticks]\n",
     "ax.set_xticks(xticks)\n",
     "ax.set_xticklabels(xticks, fontsize=14)\n",
     "\n",
     "# Y-axis\n",
     "ax.set_ylabel(\"MAE OMol25 [eV]\", **font)\n",
-    "ax.set_ylim([0, 2])\n",
-    "yticks = np.arange(0, 2.2, 0.2)\n",
+    "ax.set_ylim([0, lim])\n",
+    "yticks = np.arange(0, lim+step, step)\n",
     "ax.set_yticks(yticks)\n",
     "ax.tick_params(axis=\"y\", labelsize=14)\n",
     "\n",
@@ -1121,6 +1326,7 @@
     "ax.legend(prop={\"family\": font[\"fontname\"], \"size\": 14}, loc=\"upper right\",  frameon=True, framealpha=1, edgecolor=\"black\")\n",
     "\n",
     "# Layout\n",
+    "plt.grid(True, axis=\"both\", linestyle=\"--\", linewidth=0.5, alpha=0.7)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
