--- a/notebooks/plot_metrics.ipynb
+++ b/notebooks/plot_metrics.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#metrics_file = \"../visnet_logs/metrics.csv\"\n",
-    "metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homolumo5M128502532_transfer_converged/visnet_logs/metrics.csv\""
+    "metrics_file = \"../visnet_logs/metrics.csv\"\n",
+    "#metrics_file = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homolumo5M128502532_transfer_converged/visnet_logs/metrics.csv\""
    ]
   },
   {
@@ -112,8 +112,9 @@
     "train_loss = train_loss[2:]\n",
     "valid_loss = valid_loss[2:]\n",
     "\n",
-    "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss)\n",
-    "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss)\n",
+    "plt.plot([i+1 for i, _ in enumerate(train_loss)], train_loss, label=\"Training\")\n",
+    "plt.plot([i+1 for i, _ in enumerate(valid_loss)], valid_loss, label=\"Validation\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
