--- a/notebooks/test_model.ipynb
+++ b/notebooks/test_model.ipynb
@@ -164,12 +164,12 @@
    "outputs": [],
    "source": [
     "#logs_path = \"../visnet_logs\"\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homogap5M128502532_transfer_converged/visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_60_epochs\"\n",
+    "ckpt_name = \"model_30_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model_gwset(model, target=\"GAP\")"
+    "test_model_gwset(model, target=\"HOMO\")"
    ]
   },
   {
@@ -186,12 +186,12 @@
    "outputs": [],
    "source": [
     "#logs_path = \"../visnet_logs\"\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homogap5M128502532_transfer_converged/visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_60_epochs\"\n",
+    "ckpt_name = \"model_30_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model(model, test_set=\"PC9\", folder=\"E_qp\", target=\"gap\")\n",
+    "test_model(model, test_set=\"PC9\", folder=\"E_qp\", target=\"homo\")\n",
     "#test_model_delta(model, test_set=\"PC9\", target=\"homo\")"
    ]
   },
@@ -209,13 +209,18 @@
    "outputs": [],
    "source": [
     "#logs_path = \"../visnet_logs\"\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homogap5M128502532_transfer_converged/visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/homo5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_60_epochs\"\n",
+    "ckpt_name = \"model_30_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model(model, test_set=\"OE62L\", folder=\"E_qp\", target=\"gap\")\n",
-    "#test_model_delta(model, test_set=\"OE62L\", target=\"homo\")"
+    "test_model(model, test_set=\"OE62L\", folder=\"E_qp\", target=\"homo\")\n",
+    "#test_model_delta(model, test_set=\"OE62L\", target=\"homo\")\n",
+    "\n",
+    "'''\n",
+    "Mean = 0.0866 +-(0.0744) eV\n",
+    "Median = 0.0696 eV\n",
+    "'''"
    ]
   },
   {
@@ -232,12 +237,17 @@
    "outputs": [],
    "source": [
     "#logs_path = \"../visnet_logs\"\n",
-    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet/pretraining_finetuning_alignment/homolumo5M128502532_transfer_converged/visnet_logs\"\n",
+    "logs_path = \"/Volumes/LaCie/trained_models/ViSNet//homo5M128502532_transfer_converged/visnet_logs\"\n",
     "#ckpt_name = \"best_model\"\n",
-    "ckpt_name = \"model_25_epochs\"\n",
+    "ckpt_name = \"model_30_epochs\"\n",
     "\n",
     "model = load_model(logs_path, ckpt_name)\n",
-    "test_model(model, test_set=\"OE62H1\", folder=\"E_qp\", target=\"lumo\", limit_mol_size=True)"
+    "test_model(model, test_set=\"OE62H1\", folder=\"E_qp\", target=\"homo\", limit_mol_size=True)\n",
+    "\n",
+    "'''\n",
+    "Mean = 0.1041 +-(0.0703) eV\n",
+    "Median = 0.0905 eV\n",
+    "'''"
    ]
   },
   {
