--- a/notebooks/analyze_data.ipynb
+++ b/notebooks/analyze_data.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Number of atoms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -85,65 +92,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_N = []\n",
-    "all_Z = []\n",
-    "all_R = []\n",
-    "all_E = []\n",
-    "for i in tqdm(range(1, 133886), leave=False):\n",
-    "    mol = f\"mol_{i}\"\n",
-    "    atoms = read(f\"{xyz_path}/{mol}.xyz\", format=\"xyz\")\n",
-    "    homo_idx = np.loadtxt(f\"{homo_path}/{mol}.dat\", dtype=int)\n",
-    "    N = torch.tensor([len(atoms)])\n",
-    "    Z = pad(\n",
-    "        torch.from_numpy(atoms.get_atomic_numbers()),\n",
-    "        pad=(0, QM9_N_MAX - N)\n",
-    "    )\n",
-    "    R = pad(\n",
-    "        torch.from_numpy(atoms.get_positions()),\n",
-    "        pad=(0, 0, 0, QM9_N_MAX - N)\n",
-    "    )\n",
-    "    E = torch.tensor([np.loadtxt(f\"{eqp_path}/{mol}.dat\")[homo_idx]])\n",
-    "    all_N.append(N)\n",
-    "    all_Z.append(Z)\n",
-    "    all_R.append(R)\n",
-    "    all_E.append(E)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print((sys.getsizeof(all_N) + sys.getsizeof(all_Z) + sys.getsizeof(all_R) + sys.getsizeof(all_E)) / 1000000)\n",
-    "\n",
-    "# 4 MB ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = torch.concatenate(all_N)\n",
-    "Z = torch.concatenate(all_Z)\n",
-    "R = torch.concatenate(all_R)\n",
-    "E = torch.concatenate(all_E)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(Z[:10])"
+    "# Distribution of energies"
    ]
   },
   {
@@ -196,6 +148,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation between GW gap and first GW-BSE energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXC_SS = np.array(torch.load(os.path.join(\"/Users/dario/ViSNetGW/GWSet/train/EXC_SS.pt\")).squeeze().tolist())\n",
+    "GAP = np.array(torch.load(os.path.join(\"/Users/dario/ViSNetGW/GWSet/train/GAP.pt\")).squeeze().tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.mean(EXC_SS), np.mean(GAP))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-np.mean(EXC_SS) + np.mean(GAP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXC_SS = EXC_SS - np.mean(EXC_SS) + np.mean(GAP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(EXC_SS, bins=50, density=True, label=\"EXC\")\n",
+    "plt.hist(GAP, bins=50, density=True, label=\"GAP\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(EXC_SS, GAP)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# QCDGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import json\n",
+    "import torch\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/Volumes/LaCie/QCDGE/final_all.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.duplicated(\"Smiles_rdkit_can\") == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = len(df)\n",
+    "N_max = -1\n",
+    "with h5py.File(\"/Volumes/LaCie/QCDGE/final_all.hdf5\", \"r\") as f:\n",
+    "    for i in tqdm(range(n), leave=False):\n",
+    "        atomic_numbers = f[df.iloc[i][\"Index\"]][\"ground_state\"][\"labels\"]#[()][0]\n",
+    "        #coords = f[df.iloc[i][\"Index\"]][\"ground_state\"][\"coords\"][()]\n",
+    "        #exc_state_raw_bytes = f[df.iloc[i][\"Index\"]][\"excited_state\"][\"Info_of_AllExcitedStates\"][()][0]\n",
+    "        #exc_state_raw_str = exc_state_raw_bytes.decode(\"utf-8\")\n",
+    "        #exc_state_data = json.loads(exc_state_raw_str)\n",
+    "        #E_exc = float(exc_state_data[\"1\"][\"excitation_e_eV\"][:-3])\n",
+    "        #if atomic_numbers.size > N_max:\n",
+    "        #    N_max = atomic_numbers.size\n",
+    "        N_max = max(N_max, atomic_numbers.shape[1])\n",
+    "        print(atomic_numbers.shape)\n",
+    "        break\n",
+    "print(N_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(N_max)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -219,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
